updated my fav food

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ hr{
     width: 25%;
     float: left;
     margin-right: 30px;
-}.chili-image{
+}.paneer-chilli-image{
     width: 25%;
     float: right;
     margin-right: 30px;
